header almost done

--- a/index.html
+++ b/index.html
@@ -2,13 +2,59 @@
 <head>
     <meta charset="UTF-8">
     <title>Superfinal Exam in HTML and CSS</title>
+    <link href="https://fonts.googleapis.com/css?family=Hind&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">-->
-<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
+    <!--    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">-->
+    <!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
 </head>
 <body>
+<header>
+    <div class="hr"></div>
+    <div class="header">
+        <div class="topMenu">
+            <ul>
+                <li>CONTACT</li>
+                <li>SERVICE</li>
+                <li>WORK</li>
+                <li>PRICING</li>
+                <li>PRODUCTS</li>
+                <li>ABOUT</li>
+                <li>HOME</li>
+            </ul>
+        </div>
+        <div class="logo">
+            Save <br><br><br> Screenshot
+        </div>
+        <div class="menuContent">
+            <h1>SCREENSHOT DESIGN</h1>
+            <div class="headerText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua.
+            </div>
+            <div class="button">EXPLORE</div>
+        </div>
 
+    </div>
+</header>
+<main>
+    <div class="first">
+        <div>
+            <h3>Art Of Coding</h3>
+            <p></p>
+            <img>
+        </div>
+        <div>
+            <h3>Clean Design</h3>
+            <p></p>
+            <img>
+        </div>
+        <div>
+            <h3>Amazing Support</h3>
+            <p></p>
+            <img>
+        </div>
+    </div>
+</main>
 
 </body>
 </html>
