--- a/index.html
+++ b/index.html
@@ -40,21 +40,225 @@
     <div class="first">
         <div>
             <h3>Art Of Coding</h3>
-            <p></p>
-            <img>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore</p>
+            <img src="img/first01.jpg">
         </div>
         <div>
+            <img src="img/first02.jpg">
             <h3>Clean Design</h3>
-            <p></p>
-            <img>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore</p>
         </div>
         <div>
             <h3>Amazing Support</h3>
-            <p></p>
-            <img>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore</p>
+            <img src="img/first03.jpg">
         </div>
     </div>
-</main>
+    <div class="secondwraper">
+        <div class="second">
+            <div class="secondl">
+                <h2>Why Choose Us?</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore</p>
+                <div>
+                    EXPLORE
+                </div>
+            </div>
 
+            <div class="secondr">
+                <div>
+                    <h3>Exeptional Frontend Framework</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore
+                    </p>
+                </div>
+                <div><h3>Modern Design Trends</h3></div>
+                <div><h3>Beautifully crafted Code</h3></div>
+            </div>
+        </div>
+    </div>
+    <div class="thirdwraper">
+        <div class="third">
+            <div class="thirdcontent">
+                <h2>Latest Products</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua.
+                </p>
+            </div>
+            <div class="thirdblock">
+                <div class="thirdblock1">
+                    <div class="thirdblock1_1">
+                        <img src="img/third01.jpg">
+                    </div>
+                    <div class="thirdblock1_2">
+                        <h3>Workspace</h3>
+                        <p>MANAGEMENT</p>
+                    </div>
+                    <div class="thirdblock1_3">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore</p>
+                    </div>
+                    <div class="thirdblock1_4">
+                        <p>Read More</p>
+                        <p>-</p>
+                    </div>
+                </div>
+                <div class="thirdblock1">
+                    <div class="thirdblock1_1">
+                        <img src="img/third02.jpg">
+                    </div>
+                    <div class="thirdblock1_2">
+                        <h3>Minimalism</h3>
+                        <p>DEVELOPMENT</p>
+                    </div>
+                    <div class="thirdblock1_3">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore</p>
+                    </div>
+                    <div class="thirdblock1_4">
+                        <p>Read More</p>
+                        <p>-</p>
+                    </div>
+                </div>
+                <div class="thirdblock1">
+                    <div class="thirdblock1_1">
+                        <img src="img/third03.jpg">
+                    </div>
+                    <div class="thirdblock1_2">
+                        <h3>Cleant Style</h3>
+                        <p>Design</p>
+                    </div>
+                    <div class="thirdblock1_3">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore</p>
+                    </div>
+                    <div class="thirdblock1_4">
+                        <p>Read More</p>
+                        <p>-</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="fourthwraper">
+        <div class="fourth">
+            <div class="fourthblock">
+                <div><img src="img/icon.png"></div>
+                <div><p> Starter kit </p>
+                    <p> $ </p>
+                    <p> 49 </p></div>
+                <div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed</p></div>
+                <div>
+                    <ul>
+                        <li><p>- </p> Basic features</li>
+                        <li><p>- </p> Up to 100 Products</li>
+                        <li><p>- </p> 50 Users Panels</li>
+                    </ul>
+                </div>
+                <div>Choose</div>
+            </div>
+            <div class="fourthblock">
+                <div><img src="img/icon.png"></div>
+                <div>
+                    <p> Proffessional kit </p>
+
+                    <p> $ </p>
+                    <p> 149 </p></div>
+                <div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed</p></div>
+                <div>
+                    <ul>
+                        <li><p>- </p> Basic features</li>
+                        <li><p>- </p> Up to 100 Products</li>
+                        <li><p>- </p> 50 Users Panels</li>
+                    </ul>
+                </div>
+                <div>Choose</div>
+            </div>
+            <div class="fourthblock">
+                <div><img src="img/icon.png"></div>
+                <div><p> Advanced kit </p>
+                    <p> $ </p>
+                    <p> 249 </p></div>
+                <div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed</p></div>
+                <div>
+                    <ul>
+                        <li><p>- </p> Basic features</li>
+                        <li><p>- </p> Up to 100 Products</li>
+                        <li><p>- </p> 50 Users Panels</li>
+                    </ul>
+                </div>
+                <div>Choose</div>
+            </div>
+        </div>
+    </div>
+    <div class="fifthwraper">
+        <div class="fifth">
+            <div class="fifth1">
+                <h2>Work</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="fifth2">
+                <div><img src="img/fifth1.jpg"></div>
+                <div><img src="img/fifth2.jpg"></div>
+            </div>
+            <div class="fifth3">
+                <div><img src="img/fifth3.jpg"></div>
+                <div><img src="img/fifth4.jpg"></div>
+                <div><img src="img/fifth5.jpg"></div>
+            </div>
+        </div>
+    </div>
+    <div class="sixwraper">
+        <div class="six">
+            <div><img src="img/clients/01.png" alt=""></div>
+            <div><img src="img/clients/02.png" alt=""></div>
+            <div><img src="img/clients/03.png" alt=""></div>
+            <div><img src="img/clients/04.png" alt=""></div>
+            <div><img src="img/clients/05.png" alt=""></div>
+            <div><img src="img/clients/06.png" alt=""></div>
+
+        </div>
+
+    </div>
+</main>
+<footer>
+    <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d20197.331249548897!2d25.43954475!3d50.74467584999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1561567096942!5m2!1sru!2sua" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+    <div class="footermenuwraper">
+        <div class="footermenu">
+        <div class="fmenu1">
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Work</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+        <div class="fmenu2">
+            <ul>
+                <li>Facebook</li>
+                <li>Twitter</li>
+                <li>Insta</li>
+                <li>Youtube</li>
+            </ul>
+        </div>
+        <div class="fmenu3">
+            <ul>
+                <li>Subscribe</li>
+                <li>About</li>
+                <li>Private policy</li>
+                <li>Terms and conditions</li>
+            </ul>
+        </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
