--- a/index.html
+++ b/index.html
@@ -226,38 +226,141 @@
         </div>
 
     </div>
+    <div class="serviceswraper">
+        <div class="services">
+            <div class="servicestop">
+                <h2>Services</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit, sed do </p>
+            </div>
+            <div class="serviceslist">
+                <div>
+                    <img src="img/icon.png" alt="icon">
+                    <h3>Art of Coding</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </p>
+                </div>
+                <div>
+                    <img src="img/icon.png" alt="icon">
+                    <h3>Free Plugins</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </p>
+                </div>
+                <div>
+                    <img src="img/icon.png" alt="icon">
+                    <h3>Responsive design</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </p>
+                </div>
+                <div>
+                    <img src="img/icon.png" alt="icon">
+                    <h3>Feature Reach</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </p>
+                </div>
+                <div>
+                    <img src="img/icon.png" alt="icon">
+                    <h3>Useful Documentation</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </p>
+                </div>
+                <div>
+                    <img src="img/icon.png" alt="icon">
+                    <h3>Fast Delivery</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </p>
+                </div>
+            </div>
 
+        </div>
+    </div>
+    <div class="contactwraper">
+        <div class="contact">
+            <div class="contactblock1">
+                <div class="contactblock1_2">
+                    <h3>New York</h3>
+                    <p> HEAD OFFICE</p>
+                    <p></p>
+                </div>
+                <div class="contactblock1_3">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore</p>
+                </div>
+                <div class="contactblock1_4">
+                    <img src="img/icon.png">
+                    <p>1 012 3456 7890</p>
+                </div>
+                <div class="contactblock1_4">
+                    <img src="img/icon.png">
+                    <p>mail@test.com</p>
+                </div>
+            </div>
+            <div class="contactblock1">
+                <div class="contactblock1_2">
+                    <h3>London</h3>
+                    <p> OPERATION</p>
+                    <p></p>
+                </div>
+                <div class="contactblock1_3">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore</p>
+                </div>
+                <div class="contactblock1_4">
+                    <img src="img/icon.png">
+                    <p>44 77 3456 7890</p>
+                </div>
+                <div class="contactblock1_4">
+                    <img src="img/icon.png">
+                    <p>mail@test.com</p>
+                </div>
+            </div>
+            <div class="contactblock1">
+                <div class="contactblock1_2">
+                    <h3>Singapure</h3>
+                    <p> FINANCE</p>
+                    <p></p>
+                </div>
+                <div class="contactblock1_3">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore</p>
+                </div>
+                <div class="contactblock1_4">
+                    <img src="img/icon.png">
+                    <p>50 012 3456 7890</p>
+                </div>
+                <div class="contactblock1_4">
+                    <img src="img/icon.png">
+                    <p>mail@test.com</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
 <footer>
     <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d20197.331249548897!2d25.43954475!3d50.74467584999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1561567096942!5m2!1sru!2sua" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d20197.331249548897!2d25.43954475!3d50.74467584999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1561567096942!5m2!1sru!2sua"
+                width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <div class="footermenuwraper">
         <div class="footermenu">
-        <div class="fmenu1">
-            <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Work</li>
-                <li>Contact</li>
-            </ul>
-        </div>
-        <div class="fmenu2">
-            <ul>
-                <li>Facebook</li>
-                <li>Twitter</li>
-                <li>Insta</li>
-                <li>Youtube</li>
-            </ul>
-        </div>
-        <div class="fmenu3">
-            <ul>
-                <li>Subscribe</li>
-                <li>About</li>
-                <li>Private policy</li>
-                <li>Terms and conditions</li>
-            </ul>
-        </div>
+            <div class="fmenu1">
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Work</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+            <div class="fmenu2">
+                <ul>
+                    <li>Facebook</li>
+                    <li>Twitter</li>
+                    <li>Insta</li>
+                    <li>Youtube</li>
+                </ul>
+            </div>
+            <div class="fmenu3">
+                <ul>
+                    <li>Subscribe</li>
+                    <li>About</li>
+                    <li>Private policy</li>
+                    <li>Terms and conditions</li>
+                </ul>
+            </div>
         </div>
     </div>
 </footer>
